# lab_data_chain

./: README.md  build.py
Coder/: CMakeLists.txt  coder.cpp
Decoder/: CMakeLists.txt  DecoderPuPuPu.cpp  decoder.cpp
Demapper/: CMakeLists.txt  QAM32_demapper.cpp  QAM32_demapper.h  a.plt  bit_packing.hpp  filter.cpp  filter.hpp  gnuplot_helper.hpp
Mapper/: CMakeLists.txt  Modulyator.cpp  QAM32Modulator.cpp  QAM32Modulator.h  SignalGenerator.h  filter.hpp
Scoreboard/: CMakeLists.txt  Scoreboard.cpp
Server_Client/: CMakeLists.txt  Client.cpp  Server.cpp  ServerClient.cpp  ServerClient.h  mainClient.cpp  mainServer.cpp
demapper/: .QAM32_demapper.h.kate-swp  CMakeLists.txt  QAM32_demapper.cpp  a.plt  filter.hpp
